--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "react-measurements",
-  "version": "0.6.8",
-  "description": "A React component for measuring & annotating images.",
-  "main": "build/lib/index.js",
-  "author": "Robert Fisher",
-  "repository": "https://github.com/rmfisher/react-measurements",
-  "license": "MIT",
-  "peerDependencies": {
-    "draft-js": "^0.10.3",
-    "react": "^16.2.0"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "draft-js": "^0.10.4",
-    "file-loader": "^1.1.5",
-    "gh-pages": "^1.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "raf": "^3.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "style-loader": "^0.19.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.9.4"
-  },
-  "scripts": {
-    "build": "npm run build:lib && npm run build:demo",
-    "build:lib": "cross-env NODE_ENV=production webpack --config webpack.config.lib.js",
-    "build:demo": "cross-env NODE_ENV=production webpack --config webpack.config.demo.js",
-    "deploy": "gh-pages -d build/demo",
-    "start": "webpack-dev-server --hot --inline --config webpack.config.dev.js"
-  },
-  "files": [
-    "build/lib/index.js"
-  ]
+	"name": "react-measurements-bone-level",
+	"version": "0.6.8",
+	"description": "A React component for measuring & annotating images.",
+	"main": "build/lib/index.js",
+	"author": "Robert Fisher",
+	"repository": "https://github.com/rmfisher/react-measurements",
+	"license": "MIT",
+	"peerDependencies": {
+		"draft-js": "^0.10.3",
+		"react": "^16.2.0"
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.2",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-react": "6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"cross-env": "^5.1.1",
+		"css-loader": "^0.28.7",
+		"draft-js": "^0.10.4",
+		"file-loader": "^1.1.5",
+		"gh-pages": "^1.0.0",
+		"html-webpack-plugin": "^2.30.1",
+		"raf": "^3.4.0",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
+		"style-loader": "^0.19.0",
+		"webpack": "^2.6.1",
+		"webpack-dev-server": "^2.9.4"
+	},
+	"scripts": {
+		"build": "npm run build:lib && npm run build:demo",
+		"build:lib": "cross-env NODE_ENV=production webpack --config webpack.config.lib.js",
+		"build:demo": "cross-env NODE_ENV=production webpack --config webpack.config.demo.js",
+		"deploy": "gh-pages -d build/demo",
+		"start": "webpack-dev-server --hot --inline --config webpack.config.dev.js"
+	},
+	"files": [
+		"build/lib/index.js"
+	]
 }
